# 3d-renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  clang_format_all.py  lint.sh  run.sh
app/: main.cpp
benchmarks/: benchmark.cpp
src/: application.cpp  application.h  camera.h  constants.h  except.cpp  except.h  main.cpp  observer.hpp  render_window.cpp  render_window.h  scene.cpp  scene.h  size.h  timer.cpp  timer.h  triangle.cpp  triangle.h
src/controller/: controller.cpp  controller.h
src/kernel/: camera.cpp  camera.h  color.cpp  color.h  constants.h  directional_light.cpp  directional_light.h  frame.cpp  frame.h  kernel.cpp  kernel.h  light_source.cpp  light_source.h  linalg.h  mesh.h  obj_reader.cpp  obj_reader.h  plane.cpp  plane.h  primitives.cpp  primitives.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  scene.cpp  scene.h  timer.h  triangle.cpp  triangle.h  z_buffer.cpp  z_buffer.h
src/util/: alias.h  constants.h  except.cpp  except.h  observer.hpp  size.h  time_anchor.cpp  time_anchor.h
src/view/: main_window.cpp  main_window.h  view.cpp  view.h  view_signals.h
tests/: test.cpp
